test/symbolTest/shadowingVar.out

Error in phase Syntax Analysis, line 4:
    Problem detected at '='.
